--- a/css/style-edit.css
+++ b/css/style-edit.css
@@ -1,5 +1,465 @@
-/* ======= PLS add your style her =======*/
-
-.header-info{
+.header-info {
   align-items: center;
+}
+.staff {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  margin-top: -20px;
+  margin-bottom: -30px;
+}
+.staff-banner {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  padding: 10% 20%;
+  background-position: top center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+@media only screen and (max-width: 640px) {
+  .staff-banner {
+    padding: 25%;
+  }
+}
+.staff-banner__filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0,0,0,0.6);
+}
+.staff-banner__title {
+  text-align: center;
+  font-size: 38px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+@media only screen and (max-width: 768px) {
+  .staff-banner__title {
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .staff-banner__title {
+    font-size: 22px;
+    text-transform: none;
+    width: 100%;
+  }
+}
+.staff-banner__title-sub {
+  text-align: center;
+  font-size: 14px;
+  color: #fff;
+  opacity: 0.8;
+  max-width: 60%;
+  margin-bottom: 5%;
+}
+@media only screen and (max-width: 640px) {
+  .staff-banner__title-sub {
+    display: none;
+  }
+}
+.staff-banner__content {
+  max-width: 800px;
+  z-index: 2;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+@media only screen and (max-width: 640px) {
+  .staff-banner__content {
+    min-width: 300px;
+  }
+}
+.staff-banner__get {
+  padding: 10px 30px;
+  background: #ff8100;
+  color: #fff;
+  box-shadow: inset 0 0 0 rgba(243,128,12,0.33);
+  border-radius: 2px;
+  border: 2px solid #ea3d03;
+}
+.staff-banner__get:hover {
+  cursor: pointer;
+}
+.staff-advant {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 70px 0;
+}
+@media only screen and (max-width: 768px) {
+  .staff-advant {
+    flex-wrap: wrap;
+    padding: 30px 0;
+  }
+}
+.staff-advant__el {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24%;
+}
+@media only screen and (max-width: 768px) {
+  .staff-advant__el {
+    width: 48%;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .staff-advant__el {
+    width: 100%;
+  }
+}
+.staff-advant__el-img {
+  width: 80px;
+  height: 80px;
+  margin-right: 20px;
+}
+@media only screen and (max-width: 768px) {
+  .staff-advant__el-img {
+    width: 60px;
+    height: 60px;
+  }
+}
+.staff-title {
+  font-weight: 700;
+  font-size: 38px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  text-align: center;
+}
+@media only screen and (max-width: 768px) {
+  .staff-title {
+    font-size: 28px;
+  }
+}
+.staff-title:before {
+  content: '';
+  position: absolute;
+  height: 5px;
+  width: 100px;
+  background: #f57023;
+  bottom: 0px;
+  left: 50%;
+  margin-left: -50px;
+}
+.staff-title__sub {
+  margin-bottom: 70px;
+  text-align: center;
+  opacity: 0.8;
+}
+@media only screen and (max-width: 768px) {
+  .staff-title__sub {
+    margin-bottom: 30px;
+  }
+}
+.tab {
+  margin-bottom: 70px;
+}
+@media only screen and (max-width: 768px) {
+  .tab {
+    margin-bottom: 30px;
+  }
+}
+.tab-head {
+  display: flex;
+}
+@media only screen and (max-width: 768px) {
+  .tab-head {
+    display: none;
+  }
+}
+.tab-head__el {
+  width: 100%;
+  padding: 20px;
+}
+@media only screen and (max-width: 768px) {
+  .tab-head__el {
+    width: calc(100% / 6);
+    padding: 10px;
+  }
+}
+.tab-head__el:hover {
+  cursor: pointer;
+}
+.tab-head__el:nth-child(odd) {
+  background: #f2f2f2;
+}
+.tab-head__el:nth-child(even) {
+  background: #fafafa;
+}
+.tab-head__el--active {
+  background: #3b6bb0 !important;
+  border-radius: 20px 20px 0 0;
+  margin-top: -20px;
+  padding-top: 40px;
+}
+.tab-head__el--active .tab-head__el-val {
+  color: #fff;
+}
+.tab-head__el--active .tab-head__el-text {
+  color: #fff;
+}
+.tab-head__el-val {
+  color: #000;
+  font-size: 38px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+@media only screen and (max-width: 768px) {
+  .tab-head__el-val {
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+}
+.tab-head__el-text {
+  color: #000;
+}
+.tab-content__el {
+  border-radius: 0 0px 20px 20px;
+  display: none;
+  padding: 50px 30px;
+  color: #fff;
+  background: #3b6bb0 !important;
+  transition: all 0.4s;
+  box-shadow: 0px 10px 10px #c5c2c2;
+}
+@media only screen and (max-width: 768px) {
+  .tab-content__el {
+    display: block;
+    margin-bottom: 30px;
+    position: relative;
+  }
+}
+.tab-content__el p {
+  opacity: 0.8;
+  line-height: 1.6;
+}
+.tab-content__el-numb {
+  position: absolute;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  top: 0px;
+  right: 0px;
+  padding: 20px;
+  background: #f57023;
+}
+@media only screen and (min-width: 768px) {
+  .tab-content__el-numb {
+    display: none;
+  }
+}
+.tab-content__el--active {
+  display: block;
+}
+.tab-content__el-title {
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 50px;
+  position: relative;
+}
+@media only screen and (max-width: 768px) {
+  .tab-content__el-title {
+    font-size: 18px;
+  }
+}
+.tab-content__el-title:before {
+  content: '';
+  height: 3px;
+  width: 70px;
+  background: #f57023;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+}
+.solution-wrap {
+  margin: 0 0 70px 0;
+}
+@media only screen and (max-width: 768px) {
+  .solution-wrap {
+    margin: 30px 0;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .solution-wrap {
+    margin-top: 0;
+  }
+}
+.solution {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.solution__el {
+  width: 32%;
+  margin-bottom: 30px;
+}
+@media only screen and (max-width: 768px) {
+  .solution__el {
+    width: 48%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .solution__el {
+    width: 100%;
+  }
+}
+.solution__img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 30% 20%;
+  background-position: top center;
+  margin-bottom: 20px;
+}
+.solution__title {
+  font-size: 18px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+.solution__text {
+  line-height: 1.6;
+}
+.slider-items-clients--light {
+  box-shadow: 0 0 0 !important;
+}
+.vacancy {
+  display: flex;
+  justify-content: space-between;
+}
+.vacancy-img {
+  width: 48%;
+}
+@media only screen and (max-width: 768px) {
+  .vacancy-img {
+    width: 30%;
+  }
+  .vacancy-img img {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .vacancy-img {
+    display: none;
+  }
+}
+.vacancy__content {
+  width: 48%;
+}
+@media only screen and (max-width: 768px) {
+  .vacancy__content {
+    width: 68%;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .vacancy__content {
+    width: 100%;
+  }
+}
+.vacancy__el {
+  display: flex;
+  margin-bottom: 30px;
+}
+.vacancy__el-icon img {
+  width: 50px;
+  height: 50px;
+  margin-right: 30px;
+}
+@media only screen and (max-width: 640px) {
+  .vacancy__el-icon img {
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+  }
+}
+.vacancy__el-content {
+  width: calc(100% - 100px);
+}
+@media only screen and (max-width: 640px) {
+  .vacancy__el-content {
+    width: calc(100% - 60px);
+  }
+}
+.vacancy__el-title {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+@media only screen and (max-width: 640px) {
+  .vacancy__el-title {
+    font-size: 16px;
+  }
+}
+.vacancy__el-text {
+  line-height: 1.6;
+  opacity: 0.8;
+  font-size: 14px;
+}
+.get-vacancy {
+  background: #f0f0f0;
+  padding: 30px 0;
+}
+.get-vacancy__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media only screen and (max-width: 768px) {
+  .get-vacancy__wrap {
+    flex-flow: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+}
+.get-vacancy__icon img {
+  width: 60px;
+  height: 60px;
+  margin-right: 30px;
+}
+@media only screen and (max-width: 768px) {
+  .get-vacancy__icon img {
+    margin-right: 0;
+  }
+}
+.get-vacancy__text {
+  line-height: 1.6;
+}
+@media only screen and (max-width: 768px) {
+  .get-vacancy__text {
+    margin: 20px;
+    text-align: center;
+  }
+}
+.get-vacancy__btn {
+  padding: 10px 30px;
+  background: #ff8100;
+  color: #fff;
+  box-shadow: inset 0 0 0 rgba(243,128,12,0.33);
+  border-radius: 2px;
+  width: 300px;
+  border: 2px solid #ea3d03;
+  text-align: center;
+}
+.get-vacancy__btn:hover {
+  cursor: pointer;
 }
